--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@
         "Programming Language :: Python :: 3.12",
         "Programming Language :: Python :: 3.13",
     ]
-    dependencies = ["cappa>=0.28.0", "environs>=14.2.0", "nclutils>=0.5.0", "whenever>=0.8.5"]
+    dependencies = [
+        "apscheduler>=3.11.0,<4.0.0",
+        "cappa>=0.28.0",
+        "environs>=14.2.0",
+        "nclutils>=0.5.0",
+        "whenever>=0.8.5",
+    ]
     description = "A simple tool to backup and restore data as tgz files."
     license = "MIT"
     license-files = ["LICENSE"]
