--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,31 @@ jobs:
               env:
                   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
+    test-dockerfile:
+        runs-on: ubuntu-latest
+        strategy:
+            fail-fast: true
+            matrix:
+                python-version: ["3.13"]
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup Python, uv, and the package
+              uses: ./.github/actions/setup_python_env
+
+            - name: Setup development environment
+              shell: bash
+              run: uv run duty dev-setup
+
+            - name: Run docker compose
+              shell: bash
+              run: docker compose -f .dev/docker-compose.yml up --build
+
+            - name: Confirm backup was created
+              shell: bash
+              run: ls -l .dev/backups/*-yearly.tgz
+
     lint-project:
         runs-on: ubuntu-latest
         steps:
