--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-    authors = [{ name = "Nate Landau", email = "github@natenate.org" }]
+    authors = [{ name = "Nate Landau", email = "github@natelandau.com" }]
     classifiers = [
         "License :: OSI Approved :: MIT License",
         "Programming Language :: Python :: 3.10",
@@ -11,7 +11,7 @@
         "apscheduler>=3.11.0,<4.0.0",
         "cappa>=0.28.0",
         "environs>=14.2.0",
-        "nclutils>=0.5.0",
+        "nclutils>=0.6.0",
         "whenever>=0.8.5",
     ]
     description = "A simple tool to backup and restore data as tgz files."
@@ -108,7 +108,6 @@
     cache_dir           = ".cache/pytest"
     doctest_optionflags = ["IGNORE_EXCEPTION_DETAIL", "NORMALIZE_WHITESPACE"]
     filterwarnings      = ["error", "ignore::DeprecationWarning", "ignore::ResourceWarning"]
-    markers             = ["no_db: marks tests as not needing a database"]
     testpaths           = ["src", "tests"]
     xfail_strict        = true
 
@@ -116,21 +115,11 @@
     allow-direct-references = true
 
 [tool.ruff] # https://github.com/charliermarsh/ruff
-    exclude = [
-        ".cache",
-        ".git",
-        ".venv",
-        "__pypackages__",
-        "_build",
-        "build",
-        "dist",
-        "tmp",
-        "venv",
-    ]
-    fix = true
-    line-length = 100
-    output-format = "grouped"
-    src = ["src", "tests"]
+    exclude        = [".cache", ".git", ".venv", "_build", "build", "dist", "tmp"]
+    fix            = true
+    line-length    = 100
+    output-format  = "grouped"
+    src            = ["src", "tests"]
     target-version = "py310"
 
     [tool.ruff.lint]
