--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -11,13 +11,61 @@ concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
     cancel-in-progress: true
 
-permissions:
-    contents: write
-
 jobs:
+    test-package:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+        strategy:
+            fail-fast: true
+            matrix:
+                python-version: ["3.13"]
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup Python, uv, and the package
+              uses: ./.github/actions/setup_python_env
+
+            - name: Run tests
+              shell: bash
+              run: uv run duty test
+
+    test-dockerfile:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+        strategy:
+            fail-fast: true
+            matrix:
+                python-version: ["3.13"]
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup Python, uv, and the package
+              uses: ./.github/actions/setup_python_env
+
+            - name: Setup development environment
+              shell: bash
+              run: uv run duty dev-setup
+
+            - name: Run docker compose
+              shell: bash
+              run: docker compose -f .dev/docker-compose.yml up --build
+
+            - name: Confirm backup was created
+              shell: bash
+              run: ls -l .dev/backups/*-yearly.tgz
+
     auto-release:
         name: Create Release
         runs-on: "ubuntu-latest"
+        permissions:
+            contents: write
+        needs:
+            - test-package
+            - test-dockerfile
         strategy:
             fail-fast: true
             matrix:
@@ -96,6 +144,8 @@ jobs:
     publish-to-pypi:
         runs-on: ubuntu-latest
         needs: auto-release
+        permissions:
+            contents: read
         env:
             TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
             TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
