--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,10 +55,11 @@
     requires      = ["hatchling"]
 
 [tool.commitizen]
-    bump_message               = "bump(release): v$current_version → v$new_version"
+    bump_message               = "bump(release): v${current_version} → v${new_version}"
     changelog_merge_prerelease = true
-    tag_format                 = "v$version"
+    tag_format                 = "v${version}"
     update_changelog_on_bump   = true
+    version_files              = ["src/ezbak/constants.py:__version__"]
     version_provider           = "pep621"
 
 [tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
