ci: exclude workflows when pushing tag

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ on:
             - "uv.lock"
         branches:
             - main
+        tags-ignore:
+            - "v*"
     pull_request:
         types:
             - opened
