fix: rename env variables

--- a/dev-templates/.env.template
+++ b/dev-templates/.env.template
@@ -26,5 +26,5 @@ EZBAK_LOG_PREFIX=blackbook
 
 EZBAK_RESTORE_PATH=.dev/restore
 EZBAK_CLEAN_BEFORE_RESTORE=true
-# EZBAK_CHOWN_USER=
-# EZBAK_CHOWN_GROUP=
+# EZBAK_CHOWN_UID=
+# EZBAK_CHOWN_GID=
