--- a/.github/workflows/commit-linter.yml
+++ b/.github/workflows/commit-linter.yml
@@ -5,8 +5,6 @@ on:
     push:
         branches:
             - main
-        tags-ignore:
-            - "v*"
     pull_request:
         types:
             - opened
@@ -22,7 +20,7 @@ permissions: # added using https://github.com/step-security/secure-workflows
 
 jobs:
     lint-commits:
-        if: "!contains(github.event.head_commit.message, 'bump(release)')"
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
         permissions:
             contents: read # for actions/checkout to fetch code
             pull-requests: read # for wagoid/commitlint-github-action to get commits in PR
