--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,6 @@ on:
             - "uv.lock"
         branches:
             - main
-        tags-ignore:
-            - "v*"
     pull_request:
         types:
             - opened
@@ -32,6 +30,7 @@ concurrency:
 
 jobs:
     test-python-code:
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
         runs-on: ubuntu-latest
         strategy:
             fail-fast: true
@@ -57,6 +56,7 @@ jobs:
                   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
     test-dockerfile:
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
         runs-on: ubuntu-latest
         strategy:
             fail-fast: true
@@ -82,6 +82,7 @@ jobs:
               run: ls -l .dev/backups/*-yearly.tgz
 
     lint-project:
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
