--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,10 +64,12 @@
 
 [tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
     exclude_lines = [
+        'Run\(\).running',
         'assert_never',
         'def __repr__',
         'except [\w\s\._]+ as .*:',
         'if TYPE_CHECKING:',
+        'time\.sleep',
     ]
     fail_under = 20
     precision = 1
