--- a/dev-templates/.env.template
+++ b/dev-templates/.env.template
@@ -28,3 +28,6 @@ EZBAK_RESTORE_PATH=.dev/restore
 EZBAK_CLEAN_BEFORE_RESTORE=true
 # EZBAK_CHOWN_UID=
 # EZBAK_CHOWN_GID=
+
+# EZBAK_MONGO_DB_NAME=ezbak
+# EZBAK_MONGO_URI=mongodb://localhost:27017
