--- a/dev-templates/.env.template
+++ b/dev-templates/.env.template
@@ -1,8 +1,13 @@
+# Required Settings
+# ---------------------------
 EZBAK_ACTION=backup
 EZBAK_NAME=test
 EZBAK_SOURCE_PATHS=.dev/source/project1,.dev/source/project2
 EZBAK_STORAGE_PATHS=.dev/backups
+EZBAK_STORAGE_LOCATION=local
 
+# Backup Options
+# ---------------------------
 # EZBAK_EXCLUDE_REGEX=
 # EZBAK_INCLUDE_REGEX=
 EZBAK_STRIP_SOURCE_PATHS=false
@@ -10,6 +15,8 @@ EZBAK_COMPRESSION_LEVEL=6
 EZBAK_LABEL_TIME_UNITS=true
 EZBAK_RENAME_FILES=true
 
+# Retention Policies
+# ---------------------------
 EZBAK_MAX_BACKUPS=4
 EZBAK_RETENTION_YEARLY=4
 EZBAK_RETENTION_MONTHLY=4
@@ -18,16 +25,25 @@ EZBAK_RETENTION_DAILY=4
 EZBAK_RETENTION_HOURLY=4
 EZBAK_RETENTION_MINUTELY=4
 
+# Scheduling
+# ---------------------------
 # EZBAK_CRON=*/1 * * * *
 EZBAK_TZ=America/New_York
+
+# Logging
+# ---------------------------
 EZBAK_LOG_LEVEL=TRACE
 EZBAK_LOG_FILE=.dev/logs/ezbak.log
 EZBAK_LOG_PREFIX=blackbook
 
+# Restore
+# ---------------------------
 EZBAK_RESTORE_PATH=.dev/restore
 EZBAK_CLEAN_BEFORE_RESTORE=true
 # EZBAK_CHOWN_UID=
 # EZBAK_CHOWN_GID=
 
+# MongoDB Backup
+# ---------------------------
 # EZBAK_MONGO_DB_NAME=ezbak
 # EZBAK_MONGO_URI=mongodb://localhost:27017
