--- a/dev-templates/docker-compose.template.yml
+++ b/dev-templates/docker-compose.template.yml
@@ -9,17 +9,24 @@ services:
         container_name: ezbak
         environment:
             - TZ=America/New_York
+            # Required Settings
+            # ---------------------------
             - EZBAK_ACTION=backup
             - EZBAK_NAME=test
-            - EZBAK_STORAGE_PATHS=/backups
             - EZBAK_SOURCE_PATHS=/source/project1,/source/project2
-            - EZBAK_RESTORE_PATH=/restore
+            - EZBAK_STORAGE_PATHS=/backups
+            - EZBAK_STORAGE_LOCATION=local
+
+            # Backup Options
+            # ---------------------------
             - EZBAK_STRIP_SOURCE_PATHS=false
             - EZBAK_EXCLUDE_REGEX=
             - EZBAK_INCLUDE_REGEX=
             - EZBAK_COMPRESSION_LEVEL=6
             - EZBAK_LABEL_TIME_UNITS=true
             - EZBAK_RENAME_FILES=false
+            # Retention Policies
+            # ---------------------------
             - EZBAK_MAX_BACKUPS=4
             - EZBAK_RETENTION_YEARLY=4
             - EZBAK_RETENTION_MONTHLY=4
@@ -27,14 +34,23 @@ services:
             - EZBAK_RETENTION_DAILY=4
             - EZBAK_RETENTION_HOURLY=4
             - EZBAK_RETENTION_MINUTELY=4
+            # Scheduling
+            # ---------------------------
             # - EZBAK_CRON=*/1 * * * *
             - EZBAK_TZ=America/New_York
+            # Logging
+            # ---------------------------
             - EZBAK_LOG_LEVEL=TRACE
             - EZBAK_LOG_FILE=/logs/ezbak.log
             - EZBAK_LOG_PREFIX=docker
+            # Restore
+            # ---------------------------
+            - EZBAK_RESTORE_PATH=/restore
             - EZBAK_CLEAN_BEFORE_RESTORE=true
             # - EZBAK_CHOWN_UID=
             # - EZBAK_CHOWN_GID=
+            # MongoDB Backup
+            # ---------------------------
             # - EZBAK_MONGO_URI=mongodb://localhost:27017
             # - EZBAK_MONGO_DB_NAME=ezbak
         volumes:
