refactor: ensure temporary directory is always cleaned

--- a/dev-templates/.env.template
+++ b/dev-templates/.env.template
@@ -13,7 +13,7 @@ EZBAK_STORAGE_LOCATION=local
 EZBAK_STRIP_SOURCE_PATHS=false
 EZBAK_COMPRESSION_LEVEL=6
 EZBAK_LABEL_TIME_UNITS=true
-EZBAK_RENAME_FILES=true
+EZBAK_RENAME_FILES=false
 
 # Retention Policies
 # ---------------------------
