--- a/dev-templates/.env.template
+++ b/dev-templates/.env.template
@@ -47,3 +47,10 @@ EZBAK_CLEAN_BEFORE_RESTORE=true
 # ---------------------------
 # EZBAK_MONGO_DB_NAME=ezbak
 # EZBAK_MONGO_URI=mongodb://localhost:27017
+
+# AWS Storage Backend
+# ---------------------------
+# EZBAK_AWS_ACCESS_KEY_ID=
+# EZBAK_AWS_S3_BUCKET_NAME=
+# EZBAK_AWS_S3_BUCKET_PATH=
+# EZBAK_AWS_SECRET_ACCESS_KEY=
