fix: rename isolates storage paths

--- a/dev-templates/.env.template
+++ b/dev-templates/.env.template
@@ -50,7 +50,7 @@ EZBAK_CLEAN_BEFORE_RESTORE=true
 
 # AWS Storage Backend
 # ---------------------------
-# EZBAK_AWS_ACCESS_KEY_ID=
+# EZBAK_AWS_ACCESS_KEY=
+# EZBAK_AWS_SECRET_KEY=
 # EZBAK_AWS_S3_BUCKET_NAME=
 # EZBAK_AWS_S3_BUCKET_PATH=
-# EZBAK_AWS_SECRET_ACCESS_KEY=
