--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,17 @@
     authors = [{ name = "Nate Landau", email = "github@natelandau.com" }]
     classifiers = [
         "License :: OSI Approved :: MIT License",
-        "Programming Language :: Python :: 3.10",
         "Programming Language :: Python :: 3.11",
         "Programming Language :: Python :: 3.12",
         "Programming Language :: Python :: 3.13",
     ]
     dependencies = [
         "apscheduler>=3.11.0,<4.0.0",
+        "boto3>=1.38.41",
         "cappa>=0.28.0",
         "environs>=14.2.0",
         "nclutils>=0.6.0",
+        "rich>=14.0.0",
         "whenever>=0.8.5",
     ]
     description = "A simple tool to backup and restore data as tgz files."
@@ -19,7 +20,7 @@
     license-files = ["LICENSE"]
     name = "ezbak"
     readme = "README.md"
-    requires-python = ">=3.10, <3.14"
+    requires-python = ">=3.11, <3.14"
     version = "0.7.0"
 
     [project.urls]
@@ -124,7 +125,7 @@
     line-length    = 100
     output-format  = "grouped"
     src            = ["src", "tests"]
-    target-version = "py310"
+    target-version = "py311"
 
     [tool.ruff.lint]
         ignore = [
