--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@
         "Programming Language :: Python :: 3.13",
     ]
     dependencies = [
+        "apscheduler>=3.11.0",
         "apscheduler>=3.11.0,<4.0.0",
-        "boto3>=1.38.41",
+        "boto3>=1.38.43",
         "cappa>=0.28.0",
         "environs>=14.2.0",
         "nclutils>=0.6.0",
         "rich>=14.0.0",
-        "whenever>=0.8.5",
+        "whenever>=0.8.6",
     ]
     description = "A simple tool to backup and restore data as tgz files."
     license = "MIT"
