--- a/dev-templates/.env.template
+++ b/dev-templates/.env.template
@@ -11,6 +11,7 @@ EZBAK_STORAGE_LOCATION=local
 # EZBAK_EXCLUDE_REGEX=
 # EZBAK_INCLUDE_REGEX=
 EZBAK_STRIP_SOURCE_PATHS=false
+EZBAK_DELETE_SRC_AFTER_BACKUP=false
 EZBAK_COMPRESSION_LEVEL=6
 EZBAK_LABEL_TIME_UNITS=true
 EZBAK_RENAME_FILES=false
