--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@
     tag_format                 = "v${version}"
     update_changelog_on_bump   = true
     version_files              = ["src/ezbak/constants.py:__version__"]
-    version_provider           = "pep621"
+    version_provider           = "uv"
 
 [tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
     exclude_lines = [
