--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,3 +103,28 @@ jobs:
             - name: run all linters
               shell: bash
               run: uv run --frozen duty lint
+
+    test-publish-container:
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') && contains(github.event.head_commit.modified, 'Dockerfile') }}
+        needs: test-dockerfile
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v6
+              with:
+                  context: .
+                  platforms: linux/amd64,linux/arm64
+                  outputs: type=cacheonly
+                  tags: user/app:latest
