--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
               env:
                   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-    test-dockerfile:
+    test-from-dockerfile:
         if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
         runs-on: ubuntu-latest
         strategy:
@@ -106,7 +106,7 @@ jobs:
 
     test-publish-container:
         if: ${{ !contains(github.event.head_commit.message, 'bump(release)') && contains(github.event.head_commit.modified, 'Dockerfile') }}
-        needs: test-dockerfile
+        needs: test-from-dockerfile
         runs-on: ubuntu-latest
         permissions:
             contents: read
