--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,23 +105,33 @@ jobs:
               run: uv run --frozen duty lint
 
     test-publish-container:
-        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') && contains(github.event.head_commit.modified, 'Dockerfile') }}
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
         needs: test-from-dockerfile
         runs-on: ubuntu-latest
         permissions:
             contents: read
-            packages: write
+            pull-requests: read
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
 
+            - uses: dorny/paths-filter@v3
+              id: filter
+              with:
+                  filters: |
+                      src:
+                        - 'Dockerfile'
+
             - name: Set up QEMU
+              if: ${{ steps.filter.outputs.src == 'true' }}
               uses: docker/setup-qemu-action@v3
 
             - name: Set up Docker Buildx
+              if: ${{ steps.filter.outputs.src == 'true' }}
               uses: docker/setup-buildx-action@v3
 
             - name: Build and push Docker image
+              if: ${{ steps.filter.outputs.src == 'true' }}
               uses: docker/build-push-action@v6
               with:
                   context: .
