--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,7 +105,7 @@ jobs:
               run: uv run --frozen duty lint
 
     test-build-multiarch--container:
-        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') && github.event_name == 'pull_request' && contains(github.event.head_commit.modified, 'Dockerfile') }}
         needs: test-from-dockerfile
         runs-on: ubuntu-latest
         permissions:
@@ -115,23 +115,13 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
-            - uses: dorny/paths-filter@v3
-              id: filter
-              with:
-                  filters: |
-                      src:
-                        - 'Dockerfile'
-
             - name: Set up QEMU
-              if: ${{ steps.filter.outputs.src == 'true' }}
               uses: docker/setup-qemu-action@v3
 
             - name: Set up Docker Buildx
-              if: ${{ steps.filter.outputs.src == 'true' }}
               uses: docker/setup-buildx-action@v3
 
             - name: Build and push Docker image
-              if: ${{ steps.filter.outputs.src == 'true' }}
               uses: docker/build-push-action@v6
               with:
                   context: .
