--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,7 +105,7 @@ jobs:
               run: uv run --frozen duty lint
 
     test-build-multiarch--container:
-        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') && github.event_name == 'pull_request' && contains(github.event.head_commit.modified, 'Dockerfile') }}
+        if: ${{ !contains(github.event.head_commit.message, 'bump(release)') && github.event_name == 'pull_request' && (contains(github.event.head_commit.modified, 'Dockerfile') || contains(github.event.commits.*.modified, 'Dockerfile')) }}
         needs: test-from-dockerfile
         runs-on: ubuntu-latest
         permissions:
