ci: rename workflow

--- a/.github/workflows/test-build-container.yml
+++ b/.github/workflows/test-build-container.yml
@@ -1,7 +1,8 @@
 ---
-name: "Dockerfile Tests"
+name: "Test Build Multi-Arch Container"
 
 on:
+    workflow_dispatch:
     pull_request:
         types:
             - opened
