--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ on:
             - "**.py"
             - "pyproject.toml"
             - "uv.lock"
+            - "Dockerfile"
+            - "compose.yml"
         branches:
             - main
     pull_request:
@@ -23,6 +25,8 @@ on:
             - "**.py"
             - "pyproject.toml"
             - "uv.lock"
+            - "Dockerfile"
+            - "compose.yml"
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -55,7 +59,7 @@ jobs:
               env:
                   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-    test-dockerfile:
+    test-from-dockerfile:
         if: ${{ !contains(github.event.head_commit.message, 'bump(release)') }}
         runs-on: ubuntu-latest
         strategy:
