--- a/.github/actions/setup_python_env/action.yml
+++ b/.github/actions/setup_python_env/action.yml
@@ -9,11 +9,6 @@ inputs:
     required: false
     default: "3.12"
 
-outputs:
-  python-version:
-    description: The installed python version. Useful when given a version range as input.
-    value: ${{ steps.setup-python.outputs.python-version }}
-
 runs:
   using: composite
   steps:
@@ -22,7 +17,7 @@ runs:
       with:
         version: "latest"
         enable-cache: true
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ inputs.python-version }}
 
     - name: Install the project
       shell: bash
