ci: add permission workflows

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -100,7 +100,7 @@ jobs:
         needs: auto-release
         runs-on: ubuntu-latest
         permissions:
-            contents: read
+            contents: write
             packages: write
         env:
             REGISTRY: ghcr.io
