--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
         runs-on: ubuntu-latest
         needs: run-tests
         permissions:
-            contents: read
+            contents: write
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
