--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@
     ]
     dependencies = [
         "apscheduler>=3.11.0,<4.0.0",
-        "boto3>=1.39.3",
-        "cappa>=0.28.0",
+        "boto3>=1.39.7",
+        "cappa>=0.28.1",
         "environs>=14.2.0",
-        "nclutils>=1.1.0",
+        "nclutils>=2.0.0",
         "rich>=14.0.0",
         "whenever>=0.8.6",
     ]
@@ -35,7 +35,7 @@
         "commitizen>=4.8.3",
         "coverage>=7.9.2",
         "duty>=1.6.0",
-        "mypy>=1.16.1",
+        "mypy>=1.17.0",
         "pre-commit>=4.2.0",
         "pytest-clarity>=1.0.1",
         "pytest-cov>=6.2.1",
@@ -44,7 +44,7 @@
         "pytest-sugar>=1.0.0",
         "pytest>=8.4.1",
         "rich>=14.0.0",
-        "ruff>=0.12.2",
+        "ruff>=0.12.3",
         "time-machine>=2.16.0",
         "typos>=1.34.0",
         "yamllint>=1.37.1",
@@ -119,7 +119,7 @@
     allow-direct-references = true
 
 [tool.ruff] # https://github.com/charliermarsh/ruff
-    exclude        = [".cache", ".git", ".venv", "_build", "build", "dist", "tmp"]
+    exclude        = [".cache", ".dev", ".git", ".venv", "_build", "build", "dist", "tmp"]
     fix            = true
     line-length    = 100
     output-format  = "grouped"
