refactor: shift to instance-based application model

--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,7 @@ services:
         build: .
         env_file:
             - .env
+            - .env.secrets
         volumes:
             - .dev:/app/.dev
 
