--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@
         "Programming Language :: Python :: 3.13",
     ]
     dependencies = [
-        "apscheduler>=3.11.0, <4.0.0",
-        "boto3>=1.40.1",
+        "apscheduler>=3.11.0,<4.0.0",
+        "boto3>=1.40.6",
         "cappa>=0.29.1",
-        "nclutils>=2.0.0",
-        "pydantic-settings>=2.10.1",
-        "pydantic>=2.11.7",
+        "nclutils>=2.1.0",
+        "pydantic-settings>=2.10.1,<3.0.0",
+        "pydantic>=2.11.7,<3.0.0",
         "rich>=14.1.0",
         "whenever>=0.8.8",
     ]
@@ -34,10 +34,10 @@
 [dependency-groups]
     dev = [
         "commitizen>=4.8.3",
-        "coverage>=7.10.1",
+        "coverage>=7.10.3",
         "duty>=1.6.2",
         "mypy>=1.17.1",
-        "pre-commit>=4.2.0",
+        "pre-commit>=4.3.0",
         "pytest-clarity>=1.0.1",
         "pytest-cov>=6.2.1",
         "pytest-mock>=3.14.1",
@@ -45,9 +45,9 @@
         "pytest-sugar>=1.0.0",
         "pytest>=8.4.1",
         "rich>=14.1.0",
-        "ruff>=0.12.7",
-        "time-machine>=2.16.0",
-        "typos>=1.34.0",
+        "ruff>=0.12.8",
+        "time-machine>=2.17.0",
+        "typos>=1.35.3",
         "yamllint>=1.37.1",
     ]
 
