--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,10 @@
         "coverage>=7.10.3",
         "duty>=1.6.2",
         "mypy>=1.17.1",
-        "pre-commit>=4.3.0",
+        "prek>=0.2.12",
         "pytest-clarity>=1.0.1",
         "pytest-cov>=6.2.1",
         "pytest-mock>=3.14.1",
-        "pytest-pretty-terminal>=1.1.0",
         "pytest-sugar>=1.0.0",
         "pytest>=8.4.1",
         "rich>=14.1.0",
