--- a/.github/workflows/reusable-tests.yml
+++ b/.github/workflows/reusable-tests.yml
@@ -16,7 +16,7 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                python-version: ["3.11", "3.12", "3.13"]
+                python-version: ["3.11", "3.12", "3.13", "3.14"]
         steps:
             - name: Checkout repository
               uses: actions/checkout@v6
@@ -48,7 +48,7 @@ jobs:
             - name: Setup Python, uv, and the package
               uses: ./.github/actions/setup_python_env
               with:
-                  python-version: "3.13"
+                  python-version: "3.14"
 
             - name: Setup development environment
               shell: bash
