--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@
         "Programming Language :: Python :: 3.11",
         "Programming Language :: Python :: 3.12",
         "Programming Language :: Python :: 3.13",
+        "Programming Language :: Python :: 3.14",
     ]
     dependencies = [
         "apscheduler>=3.11.2,<4.0.0",
@@ -21,7 +22,7 @@
     license-files = ["LICENSE"]
     name = "ezbak"
     readme = "README.md"
-    requires-python = ">=3.11, <3.14"
+    requires-python = ">=3.11, <3.15"
     version = "0.11.6"
 
     [project.urls]
